cmplete refactoring of OBR Manager : shared repositories, preferences, versions